app/landing.module.scss
.scrollWrapper {
  height: 400lvh;
  pointer-events: none;
  overflow-x: hidden;

  @media (width <= 1000px) {
    height: 500lvh;
  }
}

.desktopPage {
  position: fixed;
  width: 100vw;
  height: 100lvh;
  display: block;

  @media (width <= 1000px) {
    display: none;
  }
}

.mobilePage {
  display: none;

  @media (width < 1000px) {
    display: block;
  }

  .mobileBackdrop {
    position: fixed;
    width: 100vw;
    height: 100lvh;
    top: 0;
    z-index: 0;
  }
}

.overlay {
  pointer-events: none;
  position: absolute;
  width: 100vw;
  min-height: 100lvh;
  top: 0;
  // backdrop-filter: blur(10px);
}

.mainTitle {
  color: white;
  pointer-events: auto;

  &:hover {
    color: yellow;
  }
}

.hamBtn {
  position: fixed;
  top: 30px;
  left: 20px;
  z-index: 5200;

  @media (width > 1920px) {
    top: 60px;
    left: 60px;
  }

  @media screen and (max-width: 585px) {
    right: 20px;
    top: 15px;
    left: unset;
  }
}

.navTickets {
  position: fixed;
  right: -14%;
  top: 45%;
  transform: translateY(-50%);
  z-index: 5000;

  @media (width > 1920px) {
    transform: translateY(-50%) scale(1.4) translateX(-8%) !important;
  }
}

